--- a/boleta-web/src/main/webapp/app/envio.xhtml
+++ b/boleta-web/src/main/webapp/app/envio.xhtml
@@ -33,11 +33,27 @@
                     <h:panelGrid columns="2">
                         <p:outputLabel value="Seleccione un mes y año referente a la fecha de pago"/> 
                         <p:outputPanel>
-                            <p:calendar pattern="MM_yyyy" value="#{boletaMB.fecha}" size="7">
-                                <p:ajax event="dateSelect" listener="#{boletaMB.cargarArchivos()}" update="tblPendiente tblProcesado pngResumen updFile"/>
-                            </p:calendar>
+                            <p:selectOneMenu value="#{boletaMB.mes}">
+                                <f:selectItem itemLabel="ENERO" itemValue="01"/>
+                                <f:selectItem itemLabel="FEBRERO" itemValue="02"/>
+                                <f:selectItem itemLabel="MARZO" itemValue="03"/>
+                                <f:selectItem itemLabel="ABRIL" itemValue="04"/>
+                                <f:selectItem itemLabel="MAYO" itemValue="05"/>
+                                <f:selectItem itemLabel="JUNIO" itemValue="06"/>
+                                <f:selectItem itemLabel="JULIO" itemValue="07"/>
+                                <f:selectItem itemLabel="AGOSTO" itemValue="08"/>
+                                <f:selectItem itemLabel="SEPTIEMBRE" itemValue="09"/>
+                                <f:selectItem itemLabel="OCTUBRE" itemValue="10"/>
+                                <f:selectItem itemLabel="NOVIEMBRE" itemValue="11"/>
+                                <f:selectItem itemLabel="DICIEMBRE" itemValue="12"/>
+                                <p:ajax listener="#{boletaMB.cargarArchivos()}" update="tblPendiente tblProcesado pngResumen updFile"/>
+                            </p:selectOneMenu>
                             <p:spacer width="5"/>
-                            <p:outputLabel value="NOTA: No importa el dia seleccionado" style="font-weight: bold;"/>
+                            <p:selectOneMenu value="#{boletaMB.anho}">
+                                <f:selectItem itemLabel="2019" itemValue="2019"/>
+                                <f:selectItem itemLabel="2020" itemValue="2020"/>
+                                <p:ajax listener="#{boletaMB.cargarArchivos()}" update="tblPendiente tblProcesado pngResumen updFile"/>
+                            </p:selectOneMenu>
                         </p:outputPanel>
                     </h:panelGrid>
                     <br/>
@@ -45,7 +61,7 @@
                     <br/>
                     <p:fileUpload id="updFile" widgetVar="updFile" fileUploadListener="#{boletaMB.handleFileUpload}" mode="advanced" dragDropSupport="false"
                                   multiple="true" auto="false" disabled="#{boletaMB.deshabilitar}" allowTypes="/(\.|\/)(pdf)$/" 
-                                  skinSimple="true" label="Seleccionar" uploadLabel="Cargar" cancelLabel="Cancelar" fileLimit="20000000" update="@this"/>
+                                  skinSimple="true" label="Seleccionar" uploadLabel="Cargar" cancelLabel="Cancelar" fileLimit="20000000" update="messages tblPendiente"/>
                     <br/>
                 </div>
                 <div class="ui-g-12 ui-lg-8">
