--- a/boleta-web/src/main/webapp/app/index.xhtml
+++ b/boleta-web/src/main/webapp/app/index.xhtml
@@ -20,6 +20,28 @@
                 <p:inputText value="#{enviarCorreoMB.codigoUltimo}"/>
                 <p:outputLabel value="Nombre archivo "/>
                 <p:inputText value="#{enviarCorreoMB.codigoUltimo}"/>
+                <p:outputLabel value="Mes y anho:"/>
+                <p:outputPanel>
+                    <p:selectOneMenu value="#{enviarCorreoMB.mes}">
+                        <f:selectItem itemLabel="ENERO" itemValue="01"/>
+                        <f:selectItem itemLabel="FEBRERO" itemValue="02"/>
+                        <f:selectItem itemLabel="MARZO" itemValue="03"/>
+                        <f:selectItem itemLabel="ABRIL" itemValue="04"/>
+                        <f:selectItem itemLabel="MAYO" itemValue="05"/>
+                        <f:selectItem itemLabel="JUNIO" itemValue="06"/>
+                        <f:selectItem itemLabel="JULIO" itemValue="07"/>
+                        <f:selectItem itemLabel="AGOSTO" itemValue="08"/>
+                        <f:selectItem itemLabel="SEPTIEMBRE" itemValue="09"/>
+                        <f:selectItem itemLabel="OCTUBRE" itemValue="10"/>
+                        <f:selectItem itemLabel="NOVIEMBRE" itemValue="11"/>
+                        <f:selectItem itemLabel="DICIEMBRE" itemValue="12"/>
+                    </p:selectOneMenu>
+                    <p:spacer width="5"/>
+                    <p:selectOneMenu value="#{enviarCorreoMB.anho}">
+                        <f:selectItem itemLabel="2019" itemValue="2019"/>
+                        <f:selectItem itemLabel="2020" itemValue="2020"/>
+                    </p:selectOneMenu>
+                </p:outputPanel>
                 <f:facet name="footer">
                     <p:commandButton value="Enviar" action="#{enviarCorreoMB.enviarCorreos()}" rendered="false"/>
                     <p:commandButton value="Continuar" action="#{enviarCorreoMB.enviarCorreos()}" rendered="false"/>
