--- a/boleta-web/src/main/webapp/app/index.xhtml
+++ b/boleta-web/src/main/webapp/app/index.xhtml
@@ -47,7 +47,7 @@
                     <p:commandButton value="Continuar" action="#{enviarCorreoMB.enviarCorreos()}" rendered="false"/>
                     <p:commandButton value="Separar" action="#{enviarCorreoMB.separacionDeBoletas()}"/>
                     <p:commandButton value="Separar Todo" action="#{enviarCorreoMB.separacionDeBoletasTotal()}" rendered="false"/>
-                    <p:commandButton value="Enviar 1 solo correo" action="#{enviarCorreoMB.enviarUnSoloCorreo()}"/>
+                    <p:commandButton value="Enviar 1 solo pdf" action="#{enviarCorreoMB.enviarUnSoloCorreo()}"/>
                     <p:spacer width="10"/>
                     <p:commandButton value="Enviar URL" action="#{enviarCorreoMB.enviarBoleta()}"/>
                 </f:facet>
