--- a/paquescolar-web/src/main/webapp/app/reg07PlanillaPago.xhtml
+++ b/paquescolar-web/src/main/webapp/app/reg07PlanillaPago.xhtml
@@ -408,7 +408,7 @@
 
             <f:facet name="footer">
                 <h:panelGrid columns="2">
-                    <p:commandButton value="Aceptar" icon="fa fa-check-circle" action="#{pagoProveedoresController.crearPlanillaDePago}" update="pnlFiltro pnlDatos pnlRequerimiento tbDetallePlanilla"/>
+                    <p:commandButton value="Aceptar" icon="fa fa-check-circle" action="#{pagoProveedoresController.crearPlanillaDePago}" update="pnlFiltro pnlDatos pnlRequerimiento pnlDatosPlanilla pnlRequerimiento"/>
                     <p:commandButton value="Cancelar" icon="fa fa-times-circle" onclick="PF('dlgEntidadesFinancieras').hide();"/>
                 </h:panelGrid>
             </f:facet>
