--- a/boleta-web/src/main/webapp/app/envio.xhtml
+++ b/boleta-web/src/main/webapp/app/envio.xhtml
@@ -111,11 +111,11 @@
                                      styleClass="form-group ui-panelgrid-blank">
                             <p:outputLabel value="Fecha y hora de inicio: "/>
                             <p:outputLabel value="#{boletaMB.codigoGenerado.fechaInicio}">
-                                <f:convertDateTime pattern="dd/MM/yyyy  -  HH:mm:ss"/>
+                                <f:convertDateTime pattern="dd/MM/yyyy - HH:mm"/>
                             </p:outputLabel>
                             <p:outputLabel value="Fecha y hora de fin: "/>
                             <p:outputLabel value="#{boletaMB.codigoGenerado.fechaFin}">
-                                <f:convertDateTime pattern="dd/MM/yyyy  -  HH:mm:ss"/>
+                                <f:convertDateTime pattern="dd/MM/yyyy  -  HH:mm" />
                             </p:outputLabel>
                             <p:outputLabel value="Número de docentes: "/>
                             <p:outputLabel value="#{boletaMB.codigoGenerado.enviado}" style="text-align: right;">
