--- a/boleta-web/src/main/webapp/app/manttoDocente.xhtml
+++ b/boleta-web/src/main/webapp/app/manttoDocente.xhtml
@@ -36,7 +36,7 @@
     </ui:define>
     <ui:define name="content">
         <h:form prependId="false">
-            <p:messages id="messages" closable="false" escape="false">
+            <p:messages id="messages" closable="false" escape="false" showDetail="true">
                 <p:autoUpdate />
             </p:messages>
             <div class="ui-g">
@@ -51,23 +51,23 @@
                         <p:panelGrid id="pnlFiltro" columns="2" columnClasses="col2_label,col10" 
                                      style="width: 100%; border:0px none; background-color:transparent;"
                                      styleClass="form-group ui-panelgrid-blank">
-                            <p:outputLabel for="Nip" value="NIP"/>
+                            <p:outputLabel for="Nip" value="NIP/Código empleado"/>
                             <p:inputText id="Nip" value="#{docenteController.correoDocente.nip}" required="true" style="text-transform: uppercase;"
-                                         maxlength="7" 
+                                         maxlength="7" disabled="#{docenteController.deshabilitar}"
                                          validatorMessage="El formato del NIP esta erroneo. Longitud 7">
                                 <f:validateRegex pattern="^([AIai0-9][0-9]{6}+)$"/>
                             </p:inputText>
-                            <p:outputLabel for="Nombres" value="Nombres"/>
-                            <p:inputText id="Nombres" value="#{docenteController.correoDocente.primerNombre}" size="50" style="text-transform: uppercase;" required="true"/>
-                            <p:outputLabel for="Apellidos" value="Apellidos"/>
-                            <p:inputText id="Apellidos" value="#{docenteController.correoDocente.primerApellido}" size="50" style="text-transform: uppercase;" required="true"/>
-                            <p:outputLabel for="Nit" value="NIT"/>
-                            <p:inputMask id="Nit" value="#{docenteController.correoDocente.nit}" mask="9999-999999-999-9" required="true"/>
-                            <p:outputLabel for="Dui" value="DUI"/>
-                            <p:inputMask id="Dui" value="#{docenteController.correoDocente.dui}" mask="99999999-9" required="true"/>
+                            <p:outputLabel for="Nombres" value="Nombres" rendered="#{docenteController.mostrar}"/>
+                            <p:inputText id="Nombres" value="#{docenteController.correoDocente.primerNombre}" size="50" style="text-transform: uppercase;" required="true" disabled="#{docenteController.deshabilitar}" rendered="#{docenteController.mostrar}"/>
+                            <p:outputLabel for="Apellidos" value="Apellidos" rendered="#{docenteController.mostrar}"/>
+                            <p:inputText id="Apellidos" value="#{docenteController.correoDocente.primerApellido}" size="50" style="text-transform: uppercase;" required="true" disabled="#{docenteController.deshabilitar}" rendered="#{docenteController.mostrar}"/>
+                            <p:outputLabel for="Nit" value="NIT" rendered="#{docenteController.mostrar}"/>
+                            <p:inputMask id="Nit" value="#{docenteController.correoDocente.nit}" mask="9999-999999-999-9" required="true" disabled="#{docenteController.deshabilitar}" rendered="#{docenteController.mostrar}"/>
+                            <p:outputLabel for="Dui" value="DUI" rendered="#{docenteController.mostrar}"/>
+                            <p:inputMask id="Dui" value="#{docenteController.correoDocente.dui}" mask="99999999-9" required="true" disabled="#{docenteController.deshabilitar}" rendered="#{docenteController.mostrar}"/>
                             <p:outputLabel for="Correo" value="Correo electrónico"/>
                             <p:outputPanel>
-                                <p:inputText id="Correo" value="#{docenteController.correoSinDominio}" style="text-transform: lowercase;" 
+                                <p:inputText id="Correo" value="#{docenteController.correoSinDominio}" style="text-transform: lowercase;" disabled="#{docenteController.deshabilitar}" 
                                              required="true" validatorMessage="Solo se permiten minusculas y caracteres .(punto) _ (guion bajo) - (guion medio) ">
                                      <f:validateRegex pattern="^[a-z.\S_-]+$" />
                                 </p:inputText>
@@ -82,7 +82,8 @@
                             <p:commandButton value="Nuevo" action="#{docenteController.nuevoDocente()}" update="pnlFiltro" 
                                              process="@this" validateClient="true"/>
                             <p:spacer width="5"/>
-                            <p:commandButton value="Modificar" action="#{docenteController.modificarDocente()}" process="@this" onclick="PF('dlgBusqueda').show();"/>
+                            <p:commandButton value="Modificar" action="#{docenteController.modificarDocente()}" 
+                                             process="@this" onclick="PF('dlgBusqueda').show();"/>
                             <p:spacer width="5"/>
                             <p:commandButton value="Guardar" action="#{docenteController.guardarDocente()}" validateClient="true"/>
                         </f:facet>
