cambio de fuente de correo. De archivo properties => Base de Datos

--- a/paquescolar-web/src/main/webapp/app/comunes/dialogos/seguimiento/fisico/filtroContratoSeguimiento.xhtml
+++ b/paquescolar-web/src/main/webapp/app/comunes/dialogos/seguimiento/fisico/filtroContratoSeguimiento.xhtml
@@ -14,8 +14,7 @@
                 height:auto; vertical-align: middle; width: 300px;
             }
         </style>
-        <link href="#{request.contextPath}/resources/css/dialog.css" rel="stylesheet" type="text/css" />
-        <link href="#{request.contextPath}/resources/css/iconos.css" rel="stylesheet" type="text/css" />
+        <h:outputStylesheet name="css/layout-default.css" library="paradise-layout" />
         <h:outputScript name="funciones-1.js" library="js"/>
     </h:head>
     <h:body>
