--- a/boleta-web/src/main/webapp/app/menu.xhtml
+++ b/boleta-web/src/main/webapp/app/menu.xhtml
@@ -18,6 +18,9 @@
     </ui:define>
     <ui:define name="content">
         <h:form prependId="false">
+            <p:panel visible="false">
+                <p:outputLabel value="#{enviarCorreoMB.mes}"/> 
+            </p:panel>
             <div class="ui-g">
                 <div class="ui-g-12 ui-lg-2">
 
